--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ before_install:
   - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 
 script:
-  - xctool -project Demo.xcodeproj -scheme $SCHEME -sdk $SDK ONLY_ACTIVE_ARCH=NO
+  - xctool -project Demo/Demo.xcodeproj -scheme $SCHEME -sdk $SDK ONLY_ACTIVE_ARCH=NO
