--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,34 @@
-# Reference: https://github.com/pinterest/PINRemoteImage/blob/master/.travis.yml
-#            https://github.com/Alamofire/Alamofire/blob/master/.travis.yml
 language: objective-c
-osx_image: xcode8.3
+osx_image: xcode9
 env:
   global:
-  - LC_CTYPE=en_US.UTF-8
-  - LANG=en_US.UTF-8
-  - IOS_FRAMEWORK_SCHEME="Loggerithm iOS"
-  - WATCHOS_FRAMEWORK_SCHEME="Loggerithm watchOS"
-  - TVOS_FRAMEWORK_SCHEME="Loggerithm tvOS"
-  - MACOS_FRAMEWORK_SCHEME="Loggerithm macOS"
-  - IOS_SDK=iphonesimulator10.3
-  - WATCHOS_SDK=watchsimulator3.2
-  - TVOS_SDK=appletvsimulator10.2
-  - MACOS_SDK=macosx10.12
-  - EXAMPLE_SCHEME="iOS Example"
+    - LC_CTYPE=en_US.UTF-8
+    - LANG=en_US.UTF-8
+
+    - PROJECT=Loggerithm.xcodeproj
+    - IOS_FRAMEWORK_SCHEME="Loggerithm iOS"
+    - WATCHOS_FRAMEWORK_SCHEME="Loggerithm watchOS"
+    - TVOS_FRAMEWORK_SCHEME="Loggerithm tvOS"
+    - MACOS_FRAMEWORK_SCHEME="Loggerithm macOS"
+    - EXAMPLE_SCHEME="iOS Example"
   matrix:
-    - DESTINATION="OS=10.3,name=iPhone 7 Plus"     SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"
-    - DESTINATION="OS=3.2,name=Apple Watch - 42mm" SCHEME="$WATCHOS_FRAMEWORK_SCHEME" SDK="$WATCHOS_SDK"
-    - DESTINATION="OS=10.2,name=Apple TV 1080p"    SCHEME="$TVOS_FRAMEWORK_SCHEME"    SDK="$TVOS_SDK"
-    - DESTINATION="arch=x86_64"                    SCHEME="$MACOS_FRAMEWORK_SCHEME"   SDK="$MACOS_SDK"
+    # iOS
+    - DESTINATION="OS=11.0,name=iPhone X"           SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"
+    - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"    SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"
+    - DESTINATION="OS=9.0,name=iPhone 6"            SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"
+
+    # macOS
+    - DESTINATION="arch=x86_64"                     SCHEME="$MACOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"
+
+    # tvOS
+    - DESTINATION="OS=10.2,name=Apple TV 1080p"     SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
+    - DESTINATION="OS=9.0,name=Apple TV 1080p"      SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
+
+    # watchOS
+    - DESTINATION="OS=4.0,name=Apple Watch - 42mm"  SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"
+    - DESTINATION="OS=3.2,name=Apple Watch - 42mm"  SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"
+    - DESTINATION="OS=2.0,name=Apple Watch - 42mm"  SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"
+
 before_install:
   - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
   - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
@@ -28,4 +37,16 @@ script:
   - xcodebuild -version
   - xcodebuild -showsdks
 script:
-  - xcodebuild -project Loggerithm.xcodeproj -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" ONLY_ACTIVE_ARCH=NO | xcpretty;
+  # Build Framework in Debug and Run Tests if specified
+  - if [ $RUN_TESTS == "YES" ]; then
+      xcodebuild -project "$PROJECT" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
+    else
+      xcodebuild -project "$PROJECT" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
+    fi
+
+  # Build Framework in Release and Run Tests if specified
+  - if [ $RUN_TESTS == "YES" ]; then
+      xcodebuild -project "$PROJECT" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
+    else
+      xcodebuild -project "$PROJECT" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
+    fi
